--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Nukkit</name>
+    <name>Jenisys3</name>
     <groupId>cn.nukkit</groupId>
-    <artifactId>nukkit</artifactId>
+    <artifactId>jenisys3</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
